--- a/chromeExtensions/manifest.json
+++ b/chromeExtensions/manifest.json
@@ -6,7 +6,7 @@
 	// 插件的版本
 	"version": "0.0.1",
 	// 插件描述
-	"description": "chrome和QQ浏览器有个好用的功能(也许其他浏览器也有,没试过),就是当你直接关闭浏览器时,如果当时打开了多个tab,在你再次打开浏览器时,可以在历史记录(最近关闭的标签)一次恢复他们.但是如果你忘记了恢复,并且开了一些网页并关闭过,再想恢复时,发现找不到了...所以就有了这个扩展.",
+	"description": "chrome和QQ浏览器有个好用的功能,就是当你直接关闭浏览器时,如果当时打开了多个tab,在你再次打开浏览器时,可以在历史记录(最近关闭的标签)一次恢复他们.但是如果你忘记了恢复,并且开了一些网页并关闭过,再想恢复时,发现找不到了...",
 	// 图标，一般偷懒全部用一个尺寸的也没问题
 	"icons":
 	{
@@ -29,5 +29,5 @@
 		"storage" // 插件本地存储
 	],
 	// 插件主页，这个很重要，不要浪费了这个免费广告位
-	"homepage_url": "https://tabsworkspace.klw8.top/"
+	"homepage_url": "https://tabsworkspace.klw8.top"
 }
