--- a/chromeExtensions/manifest.json
+++ b/chromeExtensions/manifest.json
@@ -1,33 +1,33 @@
 {
-	// 清单文件的版本，这个必须写，而且必须是2
+	"comment1": "清单文件的版本，这个必须写，而且必须是2",
 	"manifest_version": 2,
-	// 插件的名称
+	"comment2": "插件的名称",
 	"name": "tabsWorkSpace",
-	// 插件的版本
+	"comment3": "插件的版本",
 	"version": "0.0.2",
-	// 插件描述
+	"comment4": "插件描述",
 	"description": "chrome和QQ浏览器有个好用的功能,就是当你直接关闭浏览器时,如果当时打开了多个tab,在你再次打开浏览器时,可以在历史记录(最近关闭的标签)一次恢复他们.但是如果你忘记了恢复,并且开了一些网页并关闭过,再想恢复时,发现找不到了...",
-	// 图标，一般偷懒全部用一个尺寸的也没问题
+	"comment5": "图标，一般偷懒全部用一个尺寸的也没问题",
 	"icons":
 	{
 		"16": "img/icon.png",
 		"48": "img/icon.png",
 		"128": "img/icon.png"
 	},
-	// 浏览器右上角图标设置，browser_action、page_action、app必须三选一
+	"comment6": "浏览器右上角图标设置，browser_action、page_action、app必须三选一",
 	"browser_action": 
 	{
 		"default_icon": "img/icon.png",
-		// 图标悬停时的标题，可选
+		"comment7": "图标悬停时的标题，可选",
 		"default_title": "tabs工作区",
 		"default_popup": "popup.html"
 	},
-	// 权限申请
+	"comment8": "权限申请",
 	"permissions":
 	[
-		"tabs", // 标签
-		"storage" // 插件本地存储
+		"tabs",
+		"storage"
 	],
-	// 插件主页，这个很重要，不要浪费了这个免费广告位
+	"comment9": "插件主页，这个很重要，不要浪费了这个免费广告位",
 	"homepage_url": "https://tabsworkspace.klw8.top"
 }
